# discloud-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  publish.yml  rustfmt.yml
examples/: apps_backup.rs  apps_info.rs  apps_logs.rs  apps_manage_delete.rs  apps_manage_ram.rs  apps_manage_restart.rs  apps_manage_start.rs  apps_manage_stop.rs  apps_status.rs  apps_team_manage_add.rs  apps_team_manage_edit.rs  apps_team_manage_get.rs  apps_team_manage_remove.rs  client.rs  locale.rs
src/: app.rs  client.rs  config.rs  error.rs  lib.rs  team.rs  team_manager.rs  upload.rs  user.rs  util.rs
src/app/: backup.rs  logs.rs  manage.rs  status.rs
src/app/manage/: commit.rs  delete.rs  ram.rs  restart.rs  start.rs  stop.rs
src/team_manager/: perms.rs  team_member.rs
