[package]
name = "discloud-rs"
version = "0.1.0"
authors = ["jackskelt"]
description = "A rust wrapper for Discloud's API"
repository = "https://github.com/jackskelt/discloud-rs"
license = "Apache-2.0"
keywords = ["discloud", "hosting", "api", "wrapper"]
categories = ["api-bindings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
