[package]
name = "discloud-rs"
version = "0.3.0-alpha"
authors = ["jackskelt"]
description = "A rust wrapper for Discloud's API"
repository = "https://github.com/jackskelt/discloud-rs"
license = "Apache-2.0"
keywords = ["discloud", "hosting", "api", "wrapper"]
categories = ["api-bindings"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"
